<?xml version="1.0" encoding="UTF-8"?>

<!--
// ========================================================================
// Copyright (c) 1995-2016 Mort Bay Consulting Pty. Ltd.
//
// All rights reserved. This program and the accompanying materials
// are made available under the terms of the Eclipse Public License v1.0
// and Apache License v2.0 which accompanies this distribution.
//
// The Eclipse Public License is available at
// http://www.eclipse.org/legal/epl-v10.html
//
// The Apache License v2.0 is available at
// http://www.apache.org/licenses/LICENSE-2.0.txt
//
// You may elect to redistribute this code under either of these licenses.
// ========================================================================
 -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>org.eclipse.jetty</groupId>
    <artifactId>jetty-parent</artifactId>
    <version>20</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.eclipse.jetty.loadgenerator</groupId>
  <artifactId>jetty-load-generator</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Jetty Load Generator Project</name>

  <properties>
    <alpn.version>8.1.9.v20160720</alpn.version>
    <jetty-93-version>9.3.16.v20170120</jetty-93-version>
    <jetty-94-version>9.4.0.v20161208</jetty-94-version>
    <jackson2-version>2.8.1</jackson2-version>
    <jetty.version>${jetty-93-version}</jetty.version> <!-- 9.3.13-SNAPSHOT ${jetty-93-version} ${jetty-94-version} -->
  </properties>

  <licenses>
    <license>
      <name>Apache Software License - Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
    <license>
      <name>Eclipse Public License - Version 1.0</name>
      <url>http://www.eclipse.org/org/documents/epl-v10.php</url>
    </license>
  </licenses>

  <modules>
    <module>jetty-load-generator-client</module>
    <module>jetty-load-generator-collector</module>
    <module>jetty-load-generator-starter</module>
  </modules>

  <repositories>
    <repository>
      <id>sonatype.snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/jetty-snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>org.eclipse.jetty.loadgenerator</groupId>
        <artifactId>jetty-load-generator-client</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.hdrhistogram</groupId>
        <artifactId>HdrHistogram</artifactId>
        <version>2.1.9</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson2-version}</version>
      </dependency>

      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-client</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-jmx</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-io</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.http2</groupId>
        <artifactId>http2-http-client-transport</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.toolchain</groupId>
        <artifactId>jetty-perf-helper</artifactId>
        <version>1.0.5</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.http2</groupId>
        <artifactId>http2-server</artifactId>
        <version>${jetty.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-alpn-server</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.fcgi</groupId>
        <artifactId>fcgi-server</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty.fcgi</groupId>
        <artifactId>fcgi-client</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-xml</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.groovy</groupId>
        <artifactId>groovy</artifactId>
        <version>2.4.7</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <verbose>false</verbose>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
          <configuration>
            <argLine>-Dcom.sun.management.jmxremote -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:StartFlightRecording=duration=120s,filename=${project.build.directory}/myrecording.jfr -XX:+PrintGCDetails</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>8u00</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.0.v20141016</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u05</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_05</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.0.v20141016</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u11</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_11</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.0.v20141016</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u20</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_20</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.0.v20141016</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u25</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_25</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.2.v20141202</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u31</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_31</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.3.v20150130</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u40</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_40</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.3.v20150130</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u45</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_45</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.3.v20150130</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u51</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_51</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.4.v20150727</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u60</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_60</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.5.v20150921</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u65</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_65</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.6.v20151105</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u66</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_66</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.6.v20151105</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u71</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_71</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.7.v20160121</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u72</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_72</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.7.v20160121</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u73</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_73</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.7.v20160121</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u74</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_74</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.7.v20160121</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u77</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_77</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.7.v20160121</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u91</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_91</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.7.v20160121</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u92</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_92</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.8.v20160420</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u101</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_101</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.9.v20160720</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u102</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_102</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.9.v20160720</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u111</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_111</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.9.v20160720</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u112</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_112</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.10.v20161026</alpn.version>
      </properties>
    </profile>
    <profile>
      <id>8u121</id>
      <activation>
        <property>
          <name>java.version</name>
          <value>1.8.0_121</value>
        </property>
      </activation>
      <properties>
        <alpn.version>8.1.11.v20170118</alpn.version>
      </properties>
    </profile>
  </profiles>

</project>
